--- a/roles/php-nginx/handlers/main.yml
+++ b/roles/php-nginx/handlers/main.yml
@@ -1,18 +1,20 @@
 ---
 -
-  command: "systemctl daemon-reload"
-  name: "reload systemd"
+  name: reload systemd
+  command: systemctl daemon-reload
 -
-  name: "enable nginx"
-  service: "name=nginx state=started enabled=yes"
+  name: enable nginx
+  service: name=nginx state=started enabled=yes
 -
-  name: "restart nginx"
-  service: "name=nginx state=restarted"
+  name: restart nginx
+  service: name=nginx state=restarted
 -
-  name: "enable php"
-  service: "name=php7.2-fpm.service state=started enabled=yes"
-  when: "ansible_os_family == 'Debian'"
+  name: enable php
+  listen: restart nginx
+  service: name=php7.0-fpm.service state=started enabled=yes
+  when: ansible_os_family == 'Debian'
 -
-  name: "enable php"
-  service: "name=php72-php-fpm state=started enabled=yes"
-  when: "ansible_os_family == 'RedHat'"
+  name: enable php
+  listen: restart nginx
+  service: name=php72-php-fpm state=started enabled=yes
+  when: ansible_os_family == 'RedHat'
