--- a/roles/php-nginx/vars/Debian.yml
+++ b/roles/php-nginx/vars/Debian.yml
@@ -5,11 +5,11 @@ test_required_libs:
     - software-properties-common
     - net-tools
     - openssh-client
+    - unzip
 
 # Nginx config variable
 nginx_user: www-data
-nginx_root_dir: /etc/nginx
-nginx_config_path: /etc/nginx/nginx.conf
 app_config_path: /etc/nginx/sites-available/default
 app_config_path_link: /etc/nginx/sites-enabled/default
 nginx_config_root: /etc/nginx/sites-enabled
+fastcgi_pass: unix:/run/php/php7.0-fpm.sock
