--- a/roles/php-nginx/vars/RedHat.yml
+++ b/roles/php-nginx/vars/RedHat.yml
@@ -4,16 +4,16 @@ test_required_libs:
     - wget
     - net-tools
     - openssh-clients
+    - unzip
 
 # Nginx config variable
 nginx_user: nginx
-nginx_root_dir: /etc/nginx
-nginx_config_path: /etc/nginx/nginx.conf
 app_config_path: /etc/nginx/config/app.conf
 app_config_path_link: /etc/nginx/conf.d/default.conf
 nginx_config_root: /etc/nginx/conf.d
 fastcgi_config_file: /etc/opt/remi/php72/php-fpm.d/www.conf
 php_ini_config_file: /etc/opt/remi/php72/php.ini
+fastcgi_pass: 127.0.0.1:9000
 
 # CentOS Epel & Remi Repo
 epel_repo_url: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm"
