--- a/roles/php-nginx/vars/main.yml
+++ b/roles/php-nginx/vars/main.yml
@@ -2,5 +2,12 @@
 # Web Application Configurations
 
 app_root: /var/www/app
+wp_version: 4.9.8
+wp_download_package_name: "wordpress-{{ wp_version }}.tar.gz"
+wp_url: "https://wordpress.org/{{ wp_download_package_name }}"
+wp_tar_file: "/tmp/{{ wp_download_package_name }}"
+
+# Nginx Configurations
+nginx_root_dir: /etc/nginx
 access_log: /var/log/nginx/access.log
 error_log: /var/log/nginx/error.log
