--- a/roles/php-nginx/tasks/wordpress.yml
+++ b/roles/php-nginx/tasks/wordpress.yml
@@ -5,6 +5,8 @@
     url: "{{ wp_url }}"
     dest: /tmp
     force: no
+  tags:
+    - download_wordpress
 -
   name: "Extract archive"
   unarchive:
@@ -15,7 +17,13 @@
       - "--strip-components=1"
     group: "{{ nginx_user }}"
     owner: "{{ nginx_user }}"
-
+  tags:
+    - extact_wp_archive_to_app_root
+  notify:
+    - "reload systemd"
+    - "enable nginx"
+    - "restart nginx"
+    - "enable php"
 -
   name: "Set up wordpress file permission"
   file:
@@ -23,11 +31,15 @@
    state: directory
    mode: 0755
   with_items:
-  - "{{ app_root }}/wp-admin"
-  - "{{ app_root }}/wp-content"
-  - "{{ app_root }}/wp-includes"
-
-- name: Remove wordpress download archive
+    - "{{ app_root }}/wp-admin"
+    - "{{ app_root }}/wp-content"
+    - "{{ app_root }}/wp-includes"
+  tags:
+    - setup_wp_file_permission
+-
+  name: Remove wordpress download archive
   file:
     path: "{{ wp_tar_file }}"
     state: absent
+  tags:
+    - remove_wp_download_archive
