--- a/roles/php-nginx-wp/tasks/setup-Debian.yml
+++ b/roles/php-nginx-wp/tasks/setup-Debian.yml
@@ -41,3 +41,27 @@
     - php7.0-json
     - php7.0-opcache
     - php7.0-readline
+-
+  lineinfile: "dest=\"{{ php_ini_config_file }}\" regexp=\"{{ item.regex }}\" line=\"{{ item.line }}\""
+  name: "edit php fpm ini file settings"
+  tags:
+    - edit_php_fpm_config_ini
+  with_items:
+    -
+      line: "error_reporting = E_ALL"
+      regex: "error_reporting = .*"
+    -
+      line: "display_errors = On"
+      regex: "display_errors = .*"
+    -
+      line: cgi.fix_pathinfo=0
+      regex: cgi.fix_pathinfo=.*
+    -
+      line: "memory_limit = 512M"
+      regex: "memory_limit = .*"
+    -
+      line: "upload_max_filesize = 100M"
+      regex: "upload_max_filesize = .*"
+    -
+      line: "date.timezone = UTC"
+      regex: "date.timezone =.*"
