--- a/roles/php-nginx-wp/tasks/setup-RedHat.yml
+++ b/roles/php-nginx-wp/tasks/setup-RedHat.yml
@@ -99,6 +99,12 @@
     -
       line: "date.timezone = UTC"
       regex: "date.timezone =.*"
+    -
+      line: "post_max_size = 100M"
+      regex: "post_max_size =.*"
+    -
+      line: "max_execution_time = 300"
+      regex: "max_execution_time =.*"
 -
   name: "Enable nginx repo."
   tags:
