--- a/roles/tomcat/vars/main.yml
+++ b/roles/tomcat/vars/main.yml
@@ -1,76 +1,9 @@
 ---
-# Tomcat Version Download
-
-tomcat_version: "9.0.4"
-tomcat_build_name: "apache-tomcat-{{ tomcat_version }}"
-tomcat_package: "{{ tomcat_build_name }}.tar.gz"
-tomcat_url: "https://archive.apache.org/dist/tomcat/tomcat-{{ tomcat_version[0:1] }}/v{{ tomcat_version }}/bin/{{ tomcat_package }}"
-jenkins_url: http://mirrors.jenkins.io/war-stable/latest/jenkins.war
-jenkins_password_path: "{{ jenkins_home_path }}/secrets/initialAdminPassword"
-
-# Tomcat installation directory
-
-tomcat_home_dir: /opt/tomcat
-tomcat_app_path: /usr/share/tomcat
-jenkins_home_path: /opt/tomcat
-
-# Tomcat user and group
-
-tomcat_user: tomcat
-tomcat_group: tomcat
-
-# Tomcat roles
-
-tomcat_roles:
-  - manager-gui
-  - manager-script
-  - manager-status
-  - manager-jmx
-  - admin-gui
-  - admin-script
-
-# Tomcat user, password and assigned role
-
-tomcat_users: [
-  {
-    "name": "{{ admin_username }}",
-    "password": "{{ admin_password }}",
-    "roles": "manager-gui"
-  },
-  {
-    "name": "{{ admin_username }}",
-    "password": "{{ admin_password }}",
-    "roles": "manager-script"
-  },
-  {
-    "name": "{{ admin_username }}",
-    "password": "{{ admin_password }}",
-    "roles": "manager-status"
-  },
-  {
-    "name": "{{ admin_username }}",
-    "password": "{{ admin_password }}",
-    "roles": "manager-jmx"
-  },
-  {
-    "name": "{{ admin_username }}",
-    "password": "{{ admin_password }}",
-    "roles": "admin-gui"
-  },
-  {
-    "name": "{{ admin_username }}",
-    "password": "{{ admin_password }}",
-    "roles": "admin-script"
-  }
-]
-
-# This will configure a default manager-gui user:
-
-admin_username: admin         #later this one will be colected from ansible vault
-admin_password: adminsecret   #later this one will be colected from ansible vault
-
-# Web Application Configurations
-
-app_port: 8080
-access_log: /var/log/nginx/access.log
-error_log: /var/log/nginx/error.log
+-
+  include_vars: env.yml
+-
+  include_vars: java.yml
+-
+  include_vars: tomcat.yml
+-
+  include_vars: nginx.yml  
