added java task configuration

--- a/roles/tomcat/tasks/nginx.yml
+++ b/roles/tomcat/tasks/nginx.yml
@@ -29,12 +29,6 @@
     src: nginx.conf.j2
 -
   name: "Install application configuration in nginx sites directory"
-  notify:
-    - "reload systemd"
-    - "enable tomcat"
-    - "restart tomcat"
-    - "enable nginx"
-    - "restart nginx"
   tags:
     - install_nginx_application_config
   template:
@@ -44,10 +38,23 @@
     src: app.conf.j2
 -
   file:
+    path: "{{ app_config_path_link }}"
+    state: absent
+  name: "Remove nginx default config file"
+  tags:
+    - remove_nginx_default_config
+-
+  file:
     dest: "{{ app_config_path_link }}"
     mode: 420
     src: "{{ app_config_path }}"
     state: link
   name: "Install symlink to application config file"
+  notify:
+    - "reload systemd"
+    - "enable tomcat"
+    - "restart tomcat"
+    - "enable nginx"
+    - "restart nginx"  
   tags:
     - symlink_nginx_app_config
