--- a/roles/tomcat/tasks/env.yml
+++ b/roles/tomcat/tasks/env.yml
@@ -21,15 +21,8 @@
     name: nginx
     state: present
 -
-  file:
-    path: "{{ app_config_path_link }}"
-    state: absent
-  name: "Remove nginx default config file"
-  tags:
-    - remove_nginx_default_config
--
   changed_when: false
-  ignore_errors: yes
+  #ignore_errors: yes
   command: getenforce
   name: "Check SELinux status"
   register: sestatus
@@ -41,35 +34,4 @@
   tags:
     - allow_selinux
   when: "\"Enabled\" in sestatus.stdout or \"Enforcing\" in sestatus.stdout"
-  ignore_errors: yes
--
-  args:
-    warn: false
-  command: "wget --no-cookies --no-check-certificate --header \"Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie\" \"{{download_url}}\" -P /tmp"
-  name: "Download java source file"
-  tags:
-    - download_java
--
-  name: "RedHat | Install Java Oracle"
-  register: rpm_installation
-  yum:
-    name: "{{java_package_path}}"
-    state: installed
--
-  alternatives:
-    link: /usr/bin/java
-    name: java
-    path: "{{ java_home }}/bin/java"
-  become: true
-  name: "Set Oracle Java version as default"
-  tags:
-    - make_default
--
-  file:
-    path: "{{ item }}"
-    state: absent
-  name: "Remove artifact"
-  tags:
-    - remove_artifact
-  with_items:
-    - "{{ java_package_path }}"
+  #ignore_errors: yes
