added composer installation config

--- a/roles/uvdesk/tasks/env.yml
+++ b/roles/uvdesk/tasks/env.yml
@@ -36,6 +36,8 @@
     - php7.2-fpm
     - php7.2-intl
     - php7.2-mysql
+    - php7.2-imap
+    - php7.2-mailparse
     - php7.2-mbstring
     - php7.2-xml
     - php7.2-ldap
@@ -71,3 +73,10 @@
     -
       line: "date.timezone = UTC"
       regex: "date.timezone =.*"
+
+- 
+  command: "curl -s https://getcomposer.org/installer | php"
+  name: "run composer installer"
+- 
+  command: "mv composer.phar /usr/local/bin/composer"
+  name: "move composer installer"
