added composer installation script

--- a/roles/uvdesk/tasks/env.yml
+++ b/roles/uvdesk/tasks/env.yml
@@ -75,8 +75,21 @@
       regex: "date.timezone =.*"
 
 - 
-  command: "curl -s https://getcomposer.org/installer | php"
-  name: "run composer installer"
+  name: "Get Composer installer signature"
+  register: composer_installer_signature
+  uri: 
+    return_content: true
+    url: "https://composer.github.io/installer.sig"
 - 
-  command: "mv composer.phar /usr/local/bin/composer"
-  name: "move composer installer"
+  get_url: 
+    checksum: "sha384:{{ composer_installer_signature.content }}"
+    dest: /tmp/composer-installer.php
+    mode: 493
+    url: "https://getcomposer.org/installer"
+  name: "Download Composer installer"
+- 
+  command: "php composer-installer.php chdir=/tmp"
+  name: "Run Composer installer"
+- 
+  command: "mv /tmp/composer.phar /usr/local/bin/composer"
+  name: "Move Composer into globally-accessible location"
